css ha mejorado + logo